# chatclientjni

./: .gitignore  CMakeLists.txt
inc/: JNIChatClientListener.h  JNIChatClientListener.hpp  JNIChatClientNotifierProxy.hpp  dm_chatclient_ChatClient.h  dm_chatclient_chatclient_ChatClientJNIProxy.h  dm_chatclient_chatclient_notifier_JNIChatClientNotifier.h  dm_chatclient_chatclient_notifier_JNIChatClientNotifierProxy.h  dm_chatclient_controller_NativeChatClientController.h
src/: JNIChatClientListener.cpp  JNIChatClientNotifierProxy.cpp  dm_chatclient_ChatClient.cpp  dm_chatclient_chatclient_ChatClientJNIProxy.cpp  dm_chatclient_chatclient_notifier_JNIChatClientNotifier.cpp  dm_chatclient_chatclient_notifier_JNIChatClientNotifierProxy.cpp  dm_chatclient_controller_NativeChatClientController.cpp
