project(chatClientJNI)
cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

MESSAGE(STATUS "TARGET SYSTEM:" ${CMAKE_SYSTEM_NAME})
MESSAGE(STATUS "ANDROID API:" ${ANDROID_NATIVE_API_LEVEL})
MESSAGE(STATUS "ANDROID ABI:" ${ANDROID_ABI})
MESSAGE(STATUS "BUILD TYPE:" ${CMAKE_BUILD_TYPE})

INCLUDE_DIRECTORIES($ENV{DEPLOY_PATH}/inc/chatClientAPI)
INCLUDE_DIRECTORIES(inc)

LINK_DIRECTORIES($ENV{DEPLOY_PATH}/lib/${CMAKE_BUILD_TYPE}/android/${ANDROID_NATIVE_API_LEVEL}/${ANDROID_ABI})

SET (HEADER_FILES #inc/ChatClientNative.h
                  inc/dm_chatclient_ChatClient.h)
SET (SOURCE_FILES #src/ChatClientNative.cpp
                  src/dm_chatclient_ChatClient.cpp)
SET (LIBRARIES log chatClientAPI)

add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBRARIES})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION $ENV{DEPLOY_PATH}/lib/${CMAKE_BUILD_TYPE}/android/${ANDROID_NATIVE_API_LEVEL}/${ANDROID_ABI})
